updated unit testcases