@@ -2,8 +2,12 @@ package com.example.gymmanagement.service;
 
 import com.example.gymmanagement.dto.BookingRequest;
 import com.example.gymmanagement.dto.BookingSearchRequest;
+import com.example.gymmanagement.exception.GymClassFullyBookedException;
+import com.example.gymmanagement.exception.GymClassNotFoundException;
 import com.example.gymmanagement.model.Booking;
 import com.example.gymmanagement.model.GymClass;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.PropertySource;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -11,27 +15,31 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@PropertySource("classpath:messages.properties")
 public class BookingService {
 
     private final List<Booking> bookingList = new ArrayList<>();
+
+    @Value("${booking.class.notFound}")
+    private String classNotFoundErrorMessage;
+
+    @Value("${booking.class.full}")
+    private String classFullErrorMessage;
 
     public void createBooking(BookingRequest request, List<GymClass> gymClasses){
         GymClass availableGymClasses = gymClasses.stream()
                 .filter(c -> c.getName().equals(request.getClassName()))
                 .findFirst()
-                .orElseThrow(()-> new IllegalArgumentException("Gym class is not available."));
+                .orElseThrow(()-> new GymClassNotFoundException(classNotFoundErrorMessage));
 
         long bookedCount = bookingList.stream()
                 .filter(booking -> booking.getClassName().equals(request.getClassName())
                 && booking.getParticipationDate().equals(request.getParticipationDate()))
                 .count();
         if(bookedCount>=availableGymClasses.getCapacity())
-            throw new IllegalArgumentException("Gym class is fully booked.");
+            throw new GymClassFullyBookedException(classFullErrorMessage);
 
-        Booking booking= new Booking();
-        booking.setMemberName(request.getMemberName());
-        booking.setClassName(request.getClassName());
-        booking.setParticipationDate(request.getParticipationDate());
+        Booking booking= new Booking(request.getMemberName(),request.getClassName(), request.getParticipationDate());
 
         bookingList.add(booking);
     }
@@ -41,7 +49,7 @@ public class BookingService {
                 .filter(booking -> (request.getMemberName()==null || booking.getMemberName().equals(request.getMemberName()))
                 && (request.getStartDate()== null || !booking.getParticipationDate().isBefore(request.getStartDate()))
                 && (request.getEndDate()==null || !booking.getParticipationDate().isAfter(request.getEndDate())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Booking> getBookingList(){
